--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy.config.json",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
@@ -25,6 +25,9 @@
     "@angular/router": "^5.2.0",
     "angular-in-memory-web-api": "^0.6.0",
     "core-js": "^2.4.1",
+    "file-saver": "^1.3.8",
+    "file-system": "^2.2.2",
+    "fs-extra": "^5.0.0",
     "material-design-icons": "^3.0.1",
     "npm": "^5.8.0",
     "rxjs": "^5.5.6",
@@ -36,7 +39,7 @@
     "@angular/language-service": "^5.2.0",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
+    "@types/node": "^6.0.106",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
